--- a/src/styles/CalendarApp.css
+++ b/src/styles/CalendarApp.css
@@ -34,6 +34,7 @@
   font-size: clamp(4rem, 3.8cqi, 7rem);
   color: #fff;
   letter-spacing: 0.3rem;
+  padding-left: 1.3rem;
 }
 
 .navigate-date {
@@ -46,6 +47,7 @@
 .navigate-date h2 {
   font-size: clamp(1.5rem, 1.5cqi, 2.5rem);
   color: #bbb;
+  padding-left: 1.3rem;
 }
 
 .buttons {
@@ -96,4 +98,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #ddd;
+  cursor: pointer;
+  text-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
 }
